--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: calc(min(100vw, 1440px) / 1440 * 10);
 }
 
 body {
@@ -18,4 +18,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   position: relative;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
